# -mafia_ai

./: .gitignore  README.md  debug_narrator.ipynb  docker-compose.yml  main.py  narrator_test_results.csv  pyproject.toml  setup_project.py
Recheck/: prompts_LoRA_01_start.md  prompts_LoRA_02_cyberpunk_02.md  prompts_LoRA_02_cyberpunk_03.md  prompts_LoRA_02_cyberpunk_04.md  prompts_LoRA_02_medieval_01.md  prompts_LoRA_02_medieval_03.md  prompts_LoRA_02_medieval_04.md
backend/: pyproject.toml
backend/audio/: __init__  recognizer.py  synthesizer.py
backend/db/: __init__.py  alembic.ini  config.py  database.py  init_db.py  middleware.py  models.py  session.py
backend/narrator/: event.py  generator.py  graph.py  intent_parser.py  phases.py  schemas.py  tracing.py  train_lora.ipynb
backend/requirements/: db.txt  narrator.txt  server.txt
backend/scripts/: create_admin.py  init_db.py
backend/server/: main.py
backend/tests/: conftest.py
docker/: backend.Dockerfile  frontend.Dockerfile  init-db.sql  wait-for-postgres.sh
docker/nginx/: default.conf
docker/postgres/: init.sql
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
infra/: docker-compose.yml
infra/frontend/: package-lock.json
narrator/: event.py  generator.py  graph.py
narrator/prompts/: cyberpunk.yaml  medieval.yaml
requirements/: narrator.txt  server.txt
server/: main.py
server/game/: constants.py  player.py  roles.py  session.py
server/routers/: auth.py  lobby.py  websocket.py
server/services/: game_manager.py
tests/: auto_test.py  conftest.py  manual_test.py  test_ws_minimal.py  watch_only.py
(+52 files in other folders)
