[project]
name = "mafia-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apache-airflow>=3.2.1",
    "asyncpg>=0.31.0",
    "beautifulsoup4>=4.14.3",
    "langchain-groq>=1.1.2",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.1",
    "langgraph-checkpoint>=4.1.1",
    "lxml>=6.1.1",
    "openai>=2.38.0",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.50",
    "tiktoken>=0.13.0",
]


[project.optional-dependencies]
server = [
    "fastapi",
    "uvicorn",
]
narrator = [
    "langgraph",
    "langchain-openai",
    "openai",
    "tiktoken",
    "pyyaml",
    "pydantic",
    "python-dotenv",
]
analytics = [
    "apache-airflow",
    "beautifulsoup4",
    "lxml",
    "requests",
    "sqlalchemy",
    "asyncpg",
    "psycopg2-binary",
]
test = [
    "pytest",
    "pytest-asyncio",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["narrator", "server", "analytics", "etl", "db*"]  # перечислите все пакеты с __init__.py

[tool.pytest.ini_options]
asyncio_mode = "auto"